fix: Adjust layout styles for better responsiveness and form alignment

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -8,6 +8,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  min-height: 100vh;
 }
 
 .app-bg {
@@ -15,7 +16,8 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   position: fixed;
-  inset: 0;
+  height: 100vh;
+  width: 100vw;
   z-index: -1;
 }
 
@@ -29,7 +31,9 @@ body {
   grid-template-rows: 0fr 1fr 0fr;
 
   @include mq(tablet-small) {
+    &:not(:has(.el-form.auth)){
     display: block;
+  }
   }
 
   &:has(> .baseAuthContainer) {
